syntax = "proto3";

option go_package = "github.com/akileshsethu/grello";

package board;

service BoardService {
    rpc GetBoard (GetBoardRequest) returns (Board) {}
    rpc CreateBoard (BoardRequest) returns (Board) {}
    rpc UpdateBoard (UpdateBoardRequest) returns (Board) {}
    rpc DeleteBoard (DeleteBoardRequest) returns (DeleteBoardResponse) {}
    rpc AddTask (AddTaskRequest) returns (Board) {}
}

message GetBoardRequest {
    string id = 1;
}

message BoardRequest {
    string name = 1;
    string description = 2;
    repeated string member_ids = 3;
}

message UpdateBoardRequest {
    string id = 1;
    BoardRequest board = 2;
}

message DeleteBoardRequest {
    string id = 1;
}

message AddTaskRequest {
    string name = 1;
    string description = 2;
    string assigned_to = 3;
}

message Board {
    string id = 1;
    string name = 2;
    string description = 3;
    repeated User users = 4;
    repeated Task tasks = 5;
}

message Task {
    string id = 1;
    string name = 2;
    string description = 3;
    string assigned_to = 4;
}

message User {
    string id = 1;
    string name = 2;
}

message DeleteBoardResponse {
    string message = 1;
}

